REGRESSION (r264925): run-safari --debug no longer works https://bugs.webkit.org/show_bug.cgi?id=214947 <rdar://problem/66297850>

Reviewed by Darin Adler.

Removing these APIs in WebKit caused older versions of Safari to
break. We should add back in empty functions to make this work.

No new tests. Manually verified this fix.

* Shared/API/c/WKRenderLayer.cpp: Added.
(WKRenderLayerGetTypeID):
(WKRenderLayerGetRenderer):
(WKRenderLayerCopyRendererName):
(WKRenderLayerCopyElementTagName):
(WKRenderLayerCopyElementID):
(WKRenderLayerGetElementClassNames):
(WKRenderLayerGetAbsoluteBounds):
(WKRenderLayerIsClipping):
(WKRenderLayerIsClipped):
(WKRenderLayerIsReflection):
(WKRenderLayerGetCompositingLayerType):
(WKRenderLayerGetBackingStoreMemoryEstimate):
(WKRenderLayerGetNegativeZOrderList):
(WKRenderLayerGetNormalFlowList):
(WKRenderLayerGetPositiveZOrderList):
(WKRenderLayerGetFrameContentsLayer):
* Shared/API/c/WKRenderLayer.h: Added.
* Shared/API/c/WKRenderObject.cpp: Added.
(WKRenderObjectGetTypeID):
(WKRenderObjectCopyName):
(WKRenderObjectCopyTextSnippet):
(WKRenderObjectGetTextLength):
(WKRenderObjectCopyElementTagName):
(WKRenderObjectCopyElementID):
(WKRenderObjectGetElementClassNames):
(WKRenderObjectGetAbsolutePosition):
(WKRenderObjectGetFrameRect):
(WKRenderObjectGetChildren):
* Shared/API/c/WKRenderObject.h: Added.
* Sources.txt:
* WebKit.xcodeproj/project.pbxproj:
* WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
(WKBundlePageCopyRenderTree):
(WKBundlePageCopyRenderLayerTree):
* WebProcess/InjectedBundle/API/c/WKBundlePagePrivate.h:


Canonical link: https://commits.webkit.org/227785@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265085 268f45cc-cd09-0410-ab3c-d52691b4dbfc