Source/WebKit/WebProcess/InjectedBundle/API/c/WKBundlePagePrivate.h
@@ -71,6 +71,8 @@ WK_EXPORT void WKBundlePageSimulateMouseUp(WKBundlePageRef page, int button, WKP
 WK_EXPORT void WKBundlePageSimulateMouseMotion(WKBundlePageRef page, WKPoint position, double time);
 
 WK_EXPORT uint64_t WKBundlePageGetRenderTreeSize(WKBundlePageRef page);
+WK_EXPORT void WKBundlePageCopyRenderTree(WKBundlePageRef page);
+WK_EXPORT void WKBundlePageCopyRenderLayerTree(WKBundlePageRef page);
 
 // FIXME: This function is only still here to keep open source Mac builds building. It doesn't do anything anymore!
 // We should remove it as soon as we can.
